resources/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx-public"
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: argocd.cs.sanbox.codefresh.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: argo-cd-server
              port:
                name: http
